# othello-with-rl

./: .gitignore  README.md
demo_app/: README.md  main.py  pyproject.toml
demo_app/app/: __init__.py
demo_app/app/agents/: __init__.py  base_agent.py  bc_agent.py  ddqn_agent.py  random_agent.py
demo_app/app/controllers/: __init__.py  agent_loader.py  game_controller.py
demo_app/app/game/: __init__.py  board.py  othello_env.py  renderer.py
demo_app/app/ui/: __init__.py  agent_vs_agent_view.py  agent_vs_human_view.py  app_root.py  home_view.py
demo_app/app/utils/: __init__.py  style.py
rl_agent/: 01_dqn.ipynb  01_dqn_shaped.py  README.md  best_dqn.pth  othello.py  pyproject.toml
rl_agent/model_weights/ddqn/: 2025-09-21_12-47-29.pth
rl_agent/mori/: bc.ipynb  get_othello_data.ipynb  train_critic.ipynb  train_dqn.ipynb  train_dqn.py  train_ppo.ipynb
rl_agent/utils/: othello_env.py  othello_game.py  othello_reward.py
rl_agent/utils/mori/: othello_env.py  othello_game.py  othello_reward.py
