[project]
name = "rl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "ipykernel>=6.30.1",
    "ipytest>=0.14.2",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "mypy>=1.18.1",
    "optuna>=4.5.0",
    "pytest-notebook>=0.10.0",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "ujson>=5.11.0",
]
